tests/parser_cases/valid/const_var_decls.ob0
MODULE Main;
CONST answer = 42;
VAR x, y;
BEGIN
  x := answer;
  y := x + 1;
  WriteInt(y);
END Main.
