tests/parser_cases/invalid/missing_module_dot.ob0
(* INVALID: module terminator is missing the final '.' *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := 1;
END Main
